# ugc-analytics-service

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
clickhouse/: init-clickhouse.sql
configs/nginx/sites/: default.conf  event.conf
docs/: specification.md
event_api/: pyproject.toml
event_api/src/: main.py
event_api/src/api/v1/: __init__.py  events.py
event_api/src/core/: config.py
event_api/src/schemas/: events.py  kafka.py
event_api/src/services/: background_tasks.py  events.py  jwt_token.py  kafka_producer.py
event_api/src/tests/: conftest.py  test_events.py
kafka/: Dockerfile  healthcheck.sh
research/: docker-compose.yml  main.py  report.md  requirements.txt
research/scripts/: generate_data.py  loader.py  writer.py
